discussion/kv_engine/144962/144962_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42224: Fail the node if couchstore_commit repedetly fails header sync

Change-Id: Ic94969cc8acc08f33eb3e54fff557c36421097fc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-02-04 17:13:21.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-04 17:39:49.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33404/ : ABORTED

Failure of GoogleTest "ExecutorPoolEpEngineTest/0.TaskStats_MemAccounting":

<pre>
[ RUN      ] ExecutorPoolEpEngineTest/0.TaskStats_MemAccounting
..\kv_engine\engines\ep\tests\module_tests\executorpool_test.cc(1631): error: Expected equality of these values:
  0
  memoryPostCancel - memoryInitial
    Which is: 192
mem_used has not returned to initial value after cancelling task
[  FAILED  ] ExecutorPoolEpEngineTest/0.TaskStats_MemAccounting, where TypeParam = class TestExecutorPool (7 ms)
ExecutorPoolEpEngineTest/0.TaskStats_MemAccounting
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33404/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33404/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8864/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6937/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/vb_commit.cc b/engines/ep/src/vb_commit.cc
index 97b7318c6..4a1208574 100644
--- a/engines/ep/src/vb_commit.cc
+++ b/engines/ep/src/vb_commit.cc
@@ -25,6 +25,6 @@ Commit::Commit(Collections::VB::Manifest&amp; manifest,
                std::function&lt;bool()&gt; commitFatalCallback)
     : collections(manifest),
       proposedVBState(std::move(vbs)),
-      commitFatalCallback(commitFatalCallback) {
+      commitFatalCallback(std::move(commitFatalCallback)) {
 }
 } // namespace VB
\ No newline at end of file
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6937/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vb_commit.cc:25:16: warning: pass by value and use std::move [modernize-pass-by-value]
               std::function<bool()> commitFatalCallback)
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vb_commit.cc:28:27: note: FIX-IT applied suggested code changes
      commitFatalCallback(commitFatalCallback) {
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vb_commit.cc:28:46: note: FIX-IT applied suggested code changes
      commitFatalCallback(commitFatalCallback) {
                                             ^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/vb_commit.cc b/engines/ep/src/vb_commit.cc
index 97b7318c6..4a1208574 100644
--- a/engines/ep/src/vb_commit.cc
+++ b/engines/ep/src/vb_commit.cc
@@ -25,6 +25,6 @@ Commit::Commit(Collections::VB::Manifest&amp; manifest,
                std::function&lt;bool()&gt; commitFatalCallback)
     : collections(manifest),
       proposedVBState(std::move(vbs)),
-      commitFatalCallback(commitFatalCallback) {
+      commitFatalCallback(std::move(commitFatalCallback)) {
 }
 } // namespace VB
\ No newline at end of file
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6937/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8652/ : FAILURE

Failure of GoogleTest "ExecutorPoolEpEngineTest/0.TaskStats_MemAccounting":

<pre>
[ RUN      ] ExecutorPoolEpEngineTest/0.TaskStats_MemAccounting
[2021-02-04T17:24:08.274Z] ../kv_engine/engines/ep/tests/module_tests/executorpool_test.cc:1631: Failure
[2021-02-04T17:24:08.274Z] Expected equality of these values:
[2021-02-04T17:24:08.274Z]   0
[2021-02-04T17:24:08.274Z]   memoryPostCancel - memoryInitial
[2021-02-04T17:24:08.274Z]     Which is: 160
[2021-02-04T17:24:08.274Z] mem_used has not returned to initial value after cancelling task
[2021-02-04T17:24:08.274Z] [  FAILED  ] ExecutorPoolEpEngineTest/0.TaskStats_MemAccounting, where TypeParam = TestExecutorPool (9 ms)
ExecutorPoolEpEngineTest/0.TaskStats_MemAccounting
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8652/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5474/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28734/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16413/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7574/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8512/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
